--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "command-handler",
-  "version": "1.0.0",
-  "description": "",
+  "name": "beatscape",
+  "version": "1.1.3",
+  "description": "Discord music bot",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
@@ -9,9 +9,13 @@
     "start": "node dist/index.js",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "Discord",
+    "Bot",
+    "Music Bot"
+  ],
+  "author": "Jacob Keil",
+  "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.9.0",
