--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatscape",
-  "version": "1.1.3",
+  "version": "1.4.1",
   "description": "Discord music bot",
   "main": "dist/index.js",
   "type": "module",
@@ -17,10 +17,10 @@
   "author": "Jacob Keil",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.9.0",
     "axios": "^0.27.2",
-    "concurrently": "^7.1.0",
     "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.1",
@@ -28,5 +28,8 @@
     "tweetnacl": "^1.0.3",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.2"
   }
 }
