--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "author": "Jacob Keil",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/voice": "^0.9.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
     "axios": "^0.27.2",
-    "discord.js": "^13.6.0",
-    "dotenv": "^10.0.0",
-    "ffmpeg-static": "^4.4.1",
+    "discord.js": "^14.2.0",
+    "dotenv": "^16.0.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.0.2",
     "html-entities": "^2.3.3",
-    "tweetnacl": "^1.0.3",
-    "ytdl-core": "^4.11.0",
+    "libsodium-wrappers": "^0.7.10",
+    "ytdl-core": "4.9.2",
     "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
-    "concurrently": "^7.2.2"
+    "concurrently": "^7.3.0"
   }
 }
