--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ffmpeg-static": "^5.0.2",
     "html-entities": "^2.3.3",
     "libsodium-wrappers": "^0.7.10",
-    "ytdl-core": "4.9.2",
+    "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
